--- a/ruff.toml
+++ b/ruff.toml
@@ -58,4 +58,4 @@ line-ending = "auto"
 
 [lint.isort]
 # Import sorting configuration
-known-first-party = ["jax_finufft"]
+known-first-party = ["fftax"]
